--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,10 +79,19 @@ header
     top: 0;
     left: 0;
 }
-.header-logo {}
-.header-logo > a {}
-.header-nav {}
-.header-navlist {}
+.header-logo {
+    margin: 0;
+}
+.header-logo > a {
+    display: block;
+}
+/* .header-nav {} */
+.header-navlist {
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .header-navitem {}
 .header-navitem > a {}
 
