--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,9 +92,19 @@ header
     justify-content: space-between;
     align-items: center;
 }
-.header-navitem {}
-.header-navitem > a {}
-
+/* .header-navitem {} */
+.header-navitem > a {
+    display: block;
+    padding: 10px;
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    border-bottom: 2px solid transparent;
+    transition: border-color .25s;
+}
+.header-navitem > a:hover {
+    border-bottom: 2px solid #333;
+}
 /*
 hero
 */
