--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ grid
 }
 
 @media screen and (max-width: 768px){
-    .grid 
+    .grid {
     display: block;
     }
     .grid-col-2 > .grid-item,
@@ -54,7 +54,6 @@ grid
     }
 
 }
-
 /*
 section
 */
@@ -72,8 +71,21 @@ section
 }
 
 .section-button {
-    margin-top: 40px;
+    margin-top: 40px 0 0;
     text-align: center;
+}
+
+@media screen and (max-width:768px){
+    .section {
+        padding: 20px 10px;
+    }
+    .section-headline {
+        font-size: 30px;
+        margin: 0 0 20px;
+    }
+    .section-button {
+        margin: 20px 0 0;
+    }
 }
 
 /*
@@ -118,6 +130,13 @@ header
 .header-navitem > a:hover {
     border-bottom: 2px solid #333;
 }
+
+@media screen and (max-width:768px) {
+    .header {
+        font-style: 12px;
+    }
+}
+
 /*
 hero
 */
@@ -155,6 +174,14 @@ hero
     height: 100%;
 }
 
+@media screen and (max-width:768px){
+    .hero > strong {
+       font-size: 50px; 
+    }
+} {
+    
+}
+
 /*
 about
 */
@@ -171,6 +198,19 @@ about
     font-size: 30px;
 }
 /* .about-description{} */
+@media screen and (max-width: 768px){
+    .about {
+        display: block;
+    }
+    .about-image {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+    .about-headline {
+        font-size: 20px;
+        text-align: center;
+    }
+}
 
 /*
 feature
@@ -279,28 +319,17 @@ button
 /*
 .select, .input, .radio, textarea,
 */
-.select {
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    min-width: 500px;
+@media screen and (max-width:768px){
+    .select,
+    .input,
+    textarea {
+        min-width: auto;
+        width: 100%;
+    }     
 }
-.input {
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    min-width: 500px;
-}
-.radio {
-    margin: 0 10px;
-}
-textarea {
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    min-width: 500px;
-    min-height: 100px;
-}
+
+
+
 
 /*
 form
@@ -322,6 +351,16 @@ form
     text-align: center;
 }
 
+@media screen and (max-width:768px) {
+    .form-table,
+    .form-table tbody,
+    .form-table tr,
+    .form-table th,
+    .form-table td{
+        display: block;
+    }
+}
+
 /*
 works
 */
@@ -332,6 +371,17 @@ works
 }
 .works > img {
     margin: 0 15px;
+}
+
+@media screen and (max-width:768px) {
+   .works {
+    margin: 20px 0;
+    padding: 10px;
+   } 
+   .works > img {
+    width: 100px;
+    margin: 5px;
+   }
 }
 
 /*
@@ -377,4 +427,19 @@ footer
     display: block;
     text-align: center;
     padding: 10px;
+}
+
+@media screen and (max-width:768px) {
+    .footer-map {
+        padding: 15px;
+        display: block;
+    }
+    .footer-map > iframe {
+        width: 100%;
+        height: 200px;
+    }
+    .footer-mapinfo {
+        width: 100%;
+        text-align: center;
+    }
 }
